--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     </div>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="./images/logo.png" alt="" /></a>
+        <a class="navbar-brand" href="index.html"><img src="./images/logo.png" alt="" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
