some problm soved again

--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Service</a>
+              <a class="nav-link active" href="services.html">Service</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="gallery.html">Gallery</a>
