--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">About Us</a>
+              <a class="nav-link active" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
