--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
               <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Contact</a>
+              <a class="nav-link active" href="contact.html">Contact</a>
             </li>
           </ul>
           <a class="nav-link btn become-partner btn-deep-red" href="contact.html">Become a Partner
