--- a/gallery.html
+++ b/gallery.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="services.html">Service</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Gallery</a>
+              <a class="nav-link active" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About Us</a>
