--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   <div class="ratings-reviews">
                     <span class="user-name-blog">
                       <a href="">
-                        <i clas<i class="fa-sharp fa-solid fa-star"></i>Rating
+                        <i class="fa-sharp fa-solid fa-star"></i>Rating
                       </a>
                     </span>
                     <span class="clock-blog">
@@ -406,7 +406,7 @@
                   <div class="ratings-reviews">
                     <span class="user-name-blog">
                       <a href="">
-                        <i clas<i class="fa-sharp fa-solid fa-star"></i>Rating
+                        <i class="fa-sharp fa-solid fa-star"></i>Rating
                       </a>
                     </span>
                     <span class="clock-blog">
@@ -572,7 +572,7 @@
                   <div class="ratings-reviews">
                     <span class="user-name-blog">
                       <a href="">
-                        <i clas<i class="fa-sharp fa-solid fa-star"></i>Rating
+                        <i class="fa-sharp fa-solid fa-star"></i>Rating
                       </a>
                     </span>
                     <span class="clock-blog">
@@ -738,7 +738,7 @@
                   <div class="ratings-reviews">
                     <span class="user-name-blog">
                       <a href="">
-                        <i clas<i class="fa-sharp fa-solid fa-star"></i>Rating
+                        <i class="fa-sharp fa-solid fa-star"></i>Rating
                       </a>
                     </span>
                     <span class="clock-blog">
@@ -904,7 +904,7 @@
                   <div class="ratings-reviews">
                     <span class="user-name-blog">
                       <a href="">
-                        <i clas<i class="fa-sharp fa-solid fa-star"></i>Rating
+                        <i class="fa-sharp fa-solid fa-star"></i>Rating
                       </a>
                     </span>
                     <span class="clock-blog">
@@ -1070,7 +1070,173 @@
                   <div class="ratings-reviews">
                     <span class="user-name-blog">
                       <a href="">
-                        <i clas<i class="fa-sharp fa-solid fa-star"></i>Rating
+                        <i class="fa-sharp fa-solid fa-star"></i>Rating
+                      </a>
+                    </span>
+                    <span class="clock-blog">
+                      <a href="#">3 Reviews</a>
+                    </span>
+                  </div>
+                  <div class="amenities-main">
+                    <span class="amenity total">
+                      <i class="input-icon st-border-radius field-icon fa">
+                        <svg width="22px" height="22px" viewBox="0 0 20 20" version="1.1"
+                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
+                            stroke-linecap="round" stroke-linejoin="round">
+                            <g id="01_Home" transform="translate(-156.000000, -1369.000000)" stroke="#1A2B50"
+                              stroke-width="0.5">
+                              <g id="top-hotel" transform="translate(134.000000, 829.000000)">
+                                <g id="h1-g" transform="translate(0.000000, 109.000000)">
+                                  <g id="metadata" transform="translate(21.000000, 409.000000)">
+                                    <g id="Regular" transform="translate(1.000000, 22.000000)">
+                                      <circle id="Oval" cx="10" cy="3.125" r="2.5"></circle>
+                                      <path
+                                        d="M13.125,11.875 L13.125,10 C13.125,8.27411016 11.7258898,6.875 10,6.875 C8.27411016,6.875 6.875,8.27411016 6.875,10 L6.875,11.875 L8.125,11.875 L8.75,16.875 L11.25,16.875 L11.875,11.875 L13.125,11.875 Z"
+                                        id="Shape"></path>
+                                      <circle id="Oval" cx="3.75" cy="5" r="1.875"></circle>
+                                      <path
+                                        d="M4.75,8.28916667 C3.79624791,7.9682092 2.74632008,8.12578507 1.92880562,8.71257878 C1.11129116,9.29937249 0.626070499,10.2436921 0.625,11.25 L0.625,11.875 L1.875,11.875 L2.5,15.625 L5,15.625 L5.31333333,13.745"
+                                        id="Shape"></path>
+                                      <circle id="Oval" cx="16.25" cy="5" r="1.875"></circle>
+                                      <path
+                                        d="M15.25,8.28916667 C16.2037521,7.9682092 17.2536799,8.12578507 18.0711944,8.71257878 C18.8887088,9.29937249 19.3739295,10.2436921 19.375,11.25 L19.375,11.875 L18.125,11.875 L17.5,15.625 L15,15.625 L14.6866667,13.745"
+                                        id="Shape"></path>
+                                      <path
+                                        d="M19.375,17.5 C19.375,18.5358333 15.1775,19.375 10,19.375 C4.8225,19.375 0.625,18.5358333 0.625,17.5"
+                                        id="Shape"></path>
+                                    </g>
+                                  </g>
+                                </g>
+                              </g>
+                            </g>
+                          </g>
+                        </svg></i>2</span>
+                    <span class="amenity bed">
+                      <i class="input-icon st-border-radius field-icon fa">
+                        <svg width="20px" height="22px" viewBox="0 0 19 20" version="1.1"
+                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
+                            stroke-linecap="round" stroke-linejoin="round">
+                            <g id="01_Home" transform="translate(-235.000000, -1369.000000)" stroke="#1A2B50"
+                              stroke-width="0.5">
+                              <g id="top-hotel" transform="translate(134.000000, 829.000000)">
+                                <g id="h1-g" transform="translate(0.000000, 109.000000)">
+                                  <g id="metadata" transform="translate(21.000000, 409.000000)">
+                                    <g id="hotel-double-bed" transform="translate(81.000000, 22.000000)">
+                                      <rect id="Rectangle-path" x="0" y="0.625" width="17.5" height="18.75" rx="1.5">
+                                      </rect>
+                                      <rect id="Rectangle-path" x="2.5" y="3.125" width="5" height="3.75" rx="1.5">
+                                      </rect>
+                                      <rect id="Rectangle-path" x="10" y="3.125" width="5" height="3.75" rx="1.5">
+                                      </rect>
+                                      <path d="M0,6.875 L17.5,6.875" id="Shape"></path>
+                                      <path d="M0,10.625 L17.5,10.625" id="Shape"></path>
+                                    </g>
+                                  </g>
+                                </g>
+                              </g>
+                            </g>
+                          </g>
+                        </svg></i>1</span>
+                    <span class="amenity bath">
+                      <i class="input-icon st-border-radius field-icon fa">
+                        <svg width="22px" height="22px" viewBox="0 0 20 20" version="1.1"
+                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
+                            stroke-linecap="round" stroke-linejoin="round">
+                            <g id="01_Home" transform="translate(-313.000000, -1369.000000)" stroke="#1A2B50"
+                              stroke-width="0.5">
+                              <g id="top-hotel" transform="translate(134.000000, 829.000000)">
+                                <g id="h1-g" transform="translate(0.000000, 109.000000)">
+                                  <g id="metadata" transform="translate(21.000000, 409.000000)">
+                                    <g id="bathroom-tub-towel" transform="translate(158.000000, 22.000000)">
+                                      <path
+                                        d="M10.625,11.875 L19.375,11.875 L18.8216667,15.1966667 C18.4199536,17.6079348 16.3336681,19.3752326 13.8891667,19.375 L6.11083333,19.375 C3.66633185,19.3752326 1.5800464,17.6079348 1.17833333,15.1966667 L0.625,11.875 L4.375,11.875"
+                                        id="Shape"></path>
+                                      <path
+                                        d="M10,16.875 L5,16.875 C4.65482203,16.875 4.375,16.595178 4.375,16.25 L4.375,11.875 C4.375,11.1846441 4.93464406,10.625 5.625,10.625 L9.375,10.625 C10.0653559,10.625 10.625,11.1846441 10.625,11.875 L10.625,16.25 C10.625,16.595178 10.345178,16.875 10,16.875 Z"
+                                        id="Shape"></path>
+                                      <path
+                                        d="M13.125,3.125 C13.125,1.74428813 14.2442881,0.625 15.625,0.625 C17.0057119,0.625 18.125,1.74428813 18.125,3.125 L18.125,11.875"
+                                        id="Shape"></path>
+                                      <path
+                                        d="M10.625,5.625 C10.625,4.24428813 11.7442881,3.125 13.125,3.125 C14.5057119,3.125 15.625,4.24428813 15.625,5.625 L10.625,5.625 Z"
+                                        id="Shape"></path>
+                                    </g>
+                                  </g>
+                                </g>
+                              </g>
+                            </g>
+                          </g>
+                        </svg></i>1</span>
+                    <span class="amenity size">
+                      <i class="input-icon st-border-radius field-icon fa">
+                        <svg width="21px" height="21px" viewBox="0 0 20 20" version="1.1"
+                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
+                            stroke-linecap="round" stroke-linejoin="round">
+                            <g id="01_Home" transform="translate(-392.000000, -1369.000000)" stroke="#1A2B50"
+                              stroke-width="0.5">
+                              <g id="top-hotel" transform="translate(134.000000, 829.000000)">
+                                <g id="h1-g" transform="translate(0.000000, 109.000000)">
+                                  <g id="metadata" transform="translate(21.000000, 409.000000)">
+                                    <g id="Group" transform="translate(237.000000, 22.000000)">
+                                      <g id="Regular">
+                                        <path
+                                          d="M2.27,0.689166667 C1.88885402,0.562219668 1.46992114,0.626196552 1.14403733,0.861116845 C0.818153522,1.09603714 0.625037169,1.473269 0.625,1.875 L0.625,16.25 C0.624937287,16.7441121 0.915944243,17.1918905 1.3675,17.3925 L5.78916667,19.2675 C6.08501467,19.398354 6.41994687,19.409996 6.72416667,19.3 L12.6766667,16.93 C12.9655217,16.824933 13.2829618,16.8299764 13.5683333,16.9441667 L17.6608333,18.5525 C18.0458409,18.7064755 18.4821459,18.6595057 18.8255595,18.427113 C19.1689731,18.1947203 19.3747928,17.8071556 19.375,17.3925 L19.375,3.43 C19.3750935,2.8779044 19.0129808,2.39113546 18.4841667,2.2325 L13.4675,0.7275 C13.2436177,0.6605123 13.0054403,0.657625301 12.78,0.719166667 L6.61333333,2.45583333 C6.37526227,2.52079531 6.12328933,2.51383633 5.88916667,2.43583333 L2.27,0.689166667 Z"
+                                          id="Shape"></path>
+                                        <polygon id="Shape"
+                                          points="3.125 3.75 3.125 15.625 6.25 16.875 13.125 14.375 16.875 15.625 16.875 4.375 13.125 3.125 6.25 5">
+                                        </polygon>
+                                        <polyline id="Shape" points="3.125 8.2325 6.25 9.4825 9.375 8.2325"></polyline>
+                                        <path d="M11.875,3.46583333 L11.875,6.71916667" id="Shape"></path>
+                                        <polyline id="Shape"
+                                          points="3.125 11.9825 6.25 13.125 8.125 12.6075 8.125 16.1933333"></polyline>
+                                        <polyline id="Shape"
+                                          points="11.875 14.8291667 11.875 11.875 13.125 11.25 16.875 12.5"></polyline>
+                                      </g>
+                                    </g>
+                                  </g>
+                                </g>
+                              </g>
+                            </g>
+                          </g>
+                        </svg></i>120m<sup>2</sup></span>
+                  </div>
+                  <a class="btn-bg btn btn-blue" href="">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="blog-part">
+              <div class="blog_part_inner">
+                <div class="blog-img">
+                  <div class="feature_class st_featured featured">
+                    Featured
+                  </div>
+                  <a href="#" class="login wishlist">
+                    <div class="service-add-wishlist" title="Add to wishlist">
+                      <i class="fa fa-heart"></i>
+                    </div>
+                  </a>
+                  <a class="overly-bg">
+                    <img src="./images/blog-3.jpg" class="blog-post-image" alt="" />
+                  </a>
+                  <div class="price-wrapper">
+                    <span class="price">$345,00</span><span class="unit">/ 1 night(s)</span>
+                  </div>
+                </div>
+                <div class="wblog-content blog-content-5 all_blog_color">
+                  <h5>
+                    <a href="#"> Waterfront Artist Studio </a>
+                  </h5>
+                  <p class="place">Virginia, USA</p>
+                  <div class="ratings-reviews">
+                    <span class="user-name-blog">
+                      <a href="">
+                        <i class="fa-sharp fa-solid fa-star"></i>Rating
                       </a>
                     </span>
                     <span class="clock-blog">
